[package]
exclude = [ ".gitmodules", ".gitignore", ".travis.yml" ]
authors = [ "Tom Bebbington <tophattedcoder@gmail.com>", "Techcable <Techcable@techcable.net>" ]
description = "Just-In-Time Compilation in Rust using LibJIT bindings"
#documentation = "http://tombebbington.github.io/jit.rs/"
keywords = [ "compile", "compiler", "jit", "interpreter" ]
license = "MIT"
name = "jit"
readme = "README.md"
repository = "http://wwww.rustdox.com/TomBebbington/jit.rs/"
version = "0.9.1"
# This is private
publish = false

[lib]
name = "jit"
path = "src/jit.rs"

[dependencies]
libc = "^0.2.40"
bitflags = "^1.0.1"

[dependencies.libjit-sys]
path = "sys"
